--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1969,7 +1969,7 @@ such as $\theta_0 = \Cg^{\alg{A}}(a_0, b_0)$.)
 % \RestyleAlgo{boxed}
 \RestyleAlgo{boxruled}
 \LinesNumbered
-\begin{algorithm}[ht]
+\begin{algorithm}%[ht]
   \SetKwInOut{Input}{Input}
   \SetKwInOut{Output}{Output}
 
@@ -1993,7 +1993,7 @@ find a term $t$ such that
 return $t$
 \end{algorithm}
 
-\textcolor{red}{(We should say explicitly how to perform Step 4 of Algorithm~\ref{alg:ld-2}.)}
+\textcolor{red}{(Should we say explicitly how to perform Step 4 of Algorithm~\ref{alg:ld-2}?)}
 
 \begin{comment}
 \noindent \underline{\textbf{Subroutine \ld-2'}}\\[4pt]
@@ -2003,7 +2003,7 @@ the situation handled in Subroutine LD2 and so the general algorithm
 is the same.  Nonetheless, we include a listing of the computational 
 steps required so that later we can easily refer to this special case 
 of the general algorithm.
-\begin{enumerate}
+\begin{enumerate}[{\bf 1}]
 \item Compute $\delta_1=\com{\theta_1}$;
 \item form $C_1= \{b_0\}\times a_1/\delta_1 \leq \alg{A}\times\alg{A}$;
 \item compute
@@ -2062,7 +2062,7 @@ d(x,y,z) = t(x, p(x,y,y), p(x,y,z)).
 % \RestyleAlgo{boxed}
 \RestyleAlgo{boxruled}
 \LinesNumbered
-\begin{algorithm}[ht]
+\begin{algorithm}%[ht]
   \SetKwInOut{Input}{Input}
   \SetKwInOut{Output}{Output}
 
@@ -2095,7 +2095,7 @@ $Q_{j-1} = Q_j \mysetminus \{(a_j, b_j, 1)\}$.
 % \RestyleAlgo{boxed}
 \RestyleAlgo{boxruled}
 \LinesNumbered
-\begin{algorithm}[ht]
+\begin{algorithm}%[ht]
   \SetKwInOut{Input}{Input}
   \SetKwInOut{Output}{Output}
   \caption{Return an \ld term for the set $Q_j$ defined in~(\ref{eqn:Qj})
@@ -2212,6 +2212,85 @@ $a, b \in A$ and $\chi \in \{0,1\}$,
 $d(x,y,z)$ is the desired difference term operation for $\alg{A}$.
 
 
+
+\subsection{A more efficient algorithm}
+\label{sec:algor-3}
+In this section we refine the algorithm from Section~\ref{sec:algor-2}
+for constructing a difference term operation for a given finite idempotent 
+algebra $\alg{A}$.  
+The point here is to describe a version of the algorithm that is more practical
+and resembles how we might realistically implement it in a computer 
+programming langauge.
+
+In addition to notational conventions above, such as
+\begin{equation}
+\label{eqn:notation1}
+\theta_i = \Cg^{\alg{A}}(a_i, b_i) \; \text{ and } \;
+\delta_i=\com{\theta_i},
+\end{equation}
+we also take
+$as = ((a_0, b_0), (a_1, b_1), \dots, (a_k, b_k))$ 
+to be the list of all pairs in the set $A\times A$.
+Also define
+\begin{align*}
+\sA_0 &= \{(a_0, b_0, 0), (a_0, b_0, 1)\},\\
+\sA_1 &= \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0)\},\\
+\sA_2 &= \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), (a_1,b_1,1)\},\\
+&\vdots\\
+\sA_{2k} &= \{(a_0, b_0, 0), (a_0, b_0, 1), \dots, (a_k,b_k,0), (a_k,b_k,1)\}.
+\end{align*}
+That is, 
+$\sA_{2k} = \sA_{2k-1} \cup \{(a_k,b_k,1)\}$ and 
+$\sA_{2k+1} = \sA_{2k} \cup \{(a_k,b_k,0)\}$.
+
+\RestyleAlgo{boxruled}
+\LinesNumbered
+\begin{algorithm}%[ht]
+  \SetKwInOut{Input}{Input}
+  \SetKwInOut{Output}{Output}
+
+  \caption{return \ldt for $\sA_1$
+  \label{alg:stream-ldt1}  }
+% \Input{$as$ = the list of all pairs in $A \times A$}
+% \Output{a difference term operation for $\alg A$}
+
+compute $\delta_0$ and $\delta_1$ (see~(\ref{eqn:notation1}) for definition);
+
+compute the stream $\sS_1$ of term operations $s$ that satisfy $s(a_0,a_0,b_0) = b_0$;
+
+find $p$ in $\sS_1$ satisfying $p(a_0, b_0, b_0) \mathrel{\delta_0} a_0$;
+
+compute $c_1 = p(a_1,b_1,b_1)$;
+
+find $q$ in $\sS_1$ satisfying $q(a_1, c_1, c_1) \mathrel{\delta_1} a_1$;
+
+return $(\sS_1, s_1)$ where $s_1(x,y,z) = q(x,p(x,y,y),p(x,y,z))$
+\end{algorithm}
+
+
+% \RestyleAlgo{boxed}
+\RestyleAlgo{boxruled}
+\LinesNumbered
+\begin{algorithm}
+  \SetKwInOut{Input}{Input}
+  \SetKwInOut{Output}{Output}
+
+  \caption{return \ldt for $\sA_2$
+  \label{alg:stream-ldt2}  }
+  \Input{$(\sS_1, s_1)$ (from Alg~\ref{alg:stream-ldt1})}
+  \Output{an \ld term for $\sA_2$}
+
+compute the stream $\sS_2$ of term operations $p$ 
+that satisfy $p(s_1(a_1,a_1,b_1), s_1(a_1,a_1,b_1), b_1) = b_1$;
+
+find $p$ in $\sS_1 \cap \sS_2$ and compute $d_1 = p(a_1,b_1,b_1)$;
+
+find $q$ in $\sS_2$ satisfying $q(a_1, d_1, d_1) \mathrel{\delta_1} a_1$.
+
+return $(\sS_2, s_2)$ where $s_2(x,y,z) = q(x, p(x,y,y), p(x,y,z))$
+\end{algorithm}
+
+\newpage
 \appendix
 
 \section{Miscellaneous Proofs}
