--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -114,7 +114,6 @@
 \newcommand{\bbC}{\ensuremath{\mathbb{C}}}
 \newcommand{\bbD}{\ensuremath{\mathbb{D}}}
 \newcommand{\bbS}{\ensuremath{\mathbb{S}}}
-%% \newcommand{\bbV}{\ensuremath{\mathbb{V}}}
 \newcommand{\bbV}{\ensuremath{\operatorname{\mathbb{V}}}}
 \newcommand{\malcev}{Mal'tsev\xspace}
 \newcommand{\var}[1]{\ensuremath{\mathcal{#1}}}
@@ -226,6 +225,8 @@
 \newcommand{\ld}{\acs{ld}\xspace}
 \acrodef{ild}[ILD]{inductive local difference}
 \newcommand{\ild}{\acs{ild}\xspace}
+\newcommand{\ldt}{\ld term\xspace}
+\newcommand{\ldto}{\ldt operation\xspace}
 
 \acrodef{sat}[SAT]{satisfiability}
 \newcommand{\sat}{\acs{sat}\xspace}
