--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -431,6 +431,9 @@ MRREVIEWER = {Ivan Chajda},
 
 %%  wjd ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
+%% Delete this:
+\newcommand{\ldt}{local difference term}
+
 
 \usepackage{color}
 \usepackage{amsmath}
