Added NSF acknowledgement.

--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -490,6 +490,9 @@ Hamilton, Ontario\\
 xxxxx Canada}
 \email[Mathhew Valeriote]{matt@math.mcmaster.ca}
 
+\thanks{This research was supported by the National
+Science Foundation under Grant No. 1500235}
+
 \date{\today}
 
 \begin{document}
