--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1193,8 +1193,8 @@ since both $\alpha$ and $\rho$ are below $\rho_i$.
 So, the minimality of $n$ forces $n\le 2$ and the result follows.
 \end{proof}
 
-\textcolor{purple}{This is the third version of our theorem presenting
-our algorithm. Write an intro and explain K-K's idea. Define $\alpha_0$, $\alpha_1$.}
+%\textcolor{purple}{This is the third version of our theorem presenting
+%our algorithm. Write an intro and explain K-K's idea. Define $\alpha_0$, $\alpha_1$.}
 
 The next theorem essentially gives an algorithm to decide if a finitely
 generated variety has a difference term, which, in the next section, we 
@@ -1212,7 +1212,10 @@ interval of the same type. This connection between minimal sets with tails and
 pentagons is important for us: we do not have a polynomial time algorithm
 for finding an $\la \alpha,\beta\ra$ minimal set.
 
-
+If $\alg B$ is a subalgebra of $\alg A^2$ and $\theta$ is a congruence
+of $\alg A$, let $\theta_0 \in \con (\alg B)$ be defined by
+$(x_0,x_1) \mathrel{\theta_0} (y_0,y_1)$ if 
+$x_0 \mathrel{\theta} y_0$. $\theta_1$ is defined similarly.
 
 \begin{theorem}\label{thm:algorithm}
 Let $\alg A$ be a finite idempotent algebra and let $\sV$ be the variety 
