add def of theta sub 0, etc.

--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1215,7 +1215,13 @@ for finding an $\la \alpha,\beta\ra$ minimal set.
 If $\alg B$ is a subalgebra of $\alg A^2$ and $\theta$ is a congruence
 of $\alg A$, let $\theta_0 \in \con (\alg B)$ be defined by
 $(x_0,x_1) \mathrel{\theta_0} (y_0,y_1)$ if 
-$x_0 \mathrel{\theta} y_0$. $\theta_1$ is defined similarly.
+$x_0 \mathrel{\theta} y_0$. Of course $\theta_1$ is defined similarly.
+In the case $\theta = 0_{\alg A}$ is the least congruence,
+we use the notation $\rho_0$ and $\rho_1$ instead of 
+$0_0$ and $0_1$. Of course $\rho_0$ and $\rho_1$ are the kernels
+of the first and second projections of $\alg B$ onto~$\alg A$.
+
+
 
 \begin{theorem}\label{thm:algorithm}
 Let $\alg A$ be a finite idempotent algebra and let $\sV$ be the variety 
