--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -80,8 +80,11 @@
 \newcommand{\sansP}{\ensuremath{\mathsf{P}}}
 \newcommand{\sansPoly}{\ensuremath{\mathsf{Pol}}}
 \newcommand{\sansPol}{\ensuremath{\mathsf{Pol}}}
-\newcommand{\sansRel}{\ensuremath{\mathsf{Inv}}}
+\newcommand{\sansRel}{\ensuremath{\mathsf{Rel}}}
 \newcommand{\sansInv}{\ensuremath{\mathsf{Inv}}}
+\newcommand{\sansFix}{\ensuremath{\mathsf{Fix}}}
+\newcommand{\Inv}{\ensuremath{\mathsf{LD}}}
+\newcommand{\Fix}{\ensuremath{\mathsf{\widehat{LD}}}}
 \newcommand{\sansClo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
 \newcommand{\sansR}{\ensuremath{\mathsf{R}}} % ALL FINITARY RELATIONS
 \newcommand{\sansS}{\ensuremath{\mathsf{S}}}
@@ -144,6 +147,7 @@
 \newcommand{\scA}{\ensuremath{\mathscr{A}}}
 \newcommand{\sV}{\ensuremath{\mathcal{V}}}
 \newcommand{\sB}{\ensuremath{\mathcal{B}}}
+\newcommand{\sT}{\ensuremath{\mathcal{T}}}
 \newcommand{\sS}{\ensuremath{\mathcal{S}}}
 \newcommand{\cC}{\ensuremath{\mathcal{C}}}
 \newcommand{\cS}{\ensuremath{\mathcal{S}}}
