improvements (added tooltips)

--- a/DiffTerm/inputs/rflatexmacs.sty
+++ b/DiffTerm/inputs/rflatexmacs.sty
@@ -176,7 +176,7 @@
 % used in chapter 12.
 
 \newcommand{\freeop}[2]{{\mathbf F}_{\boldsymbol #1}(#2)}
-\newcommand{\ul}{\underline}
+%% \newcommand{\ul}{\underline}
  
 %%%=================Emphasizing with bold=================
 
